--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -358,3 +358,10 @@ footer {
     color: rgb(98, 8, 41);
     text-shadow: 9px 4px 14px #7b138d68, -8px -5px 14px #8652da75;
 }
+
+#florence {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  font-size: x-large;
+  color: #e8a8a8;
+}
